feat(cli): setup CLI command

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2019",
     "sourceMap": true,
-    "outDir": "dist/src",
+    "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "paths": {
