--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "type": "module",
+  "main": "src/app.ts",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/cli/index.js",
+    "cli": "ts-node --transpile-only src/cli/index.ts",
     "prettier:check": "prettier --check ./**/*.{ts,js,json,*rc}",
     "format": "prettier --write \"./**/*.{ts,js,json,*rc}\" \"src/tests/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "prepare": "husky install",
     "precommit": "lint-staged",
     "prepush": "",
-    "prebuild": "rimraf dist"
+    "prebuild": "rimraf dist",
+    "dev": "nodemon --loader ts-node src/app.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,11 +28,16 @@
   "author": "",
   "license": "",
   "keywords": [],
-  "dependencies": {},
   "devDependencies": {
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^16.2.4",
+    "@types/axios": "^0.9.36",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10",
+    "@types/node-cron": "^3.0.11",
+    "@types/pg": "^8.11.11",
+    "@types/puppeteer": "^5.4.7",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "commitizen": "^4.2.5",
@@ -36,8 +50,18 @@
     "lint-staged": "^12.5.0",
     "prettier": "^2.7.1",
     "ts-loader": "^9.3.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.2.3"
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "axios": "^1.8.3",
+    "csv-parser": "^3.2.0",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^24.4.0"
+  },
+  "bin": {
+    "bloggen": "ts-node ./src/cli/index.ts"
   }
 }
